added dummy links and link styling

--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
         <!-- <h1>Zo's Photos</h1> -->
         <nav>
             <li>
-                Home
+               <a href="#">Home</a>
             </li>
-            <li>
-                Featured
+            <li><a href="#">
+                Featured</a>
             </li>
-            <li>
-                Places
+            <li><a href="#">
+                Places</a>
             </li>
-            <li>
-                Albums
+            <li><a href="#">
+                Albums</a>
             </li>
         </nav>
     </header>
