--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     </section>
     <section class="album-grid">
         <div class="photo-container album-container">
+            <h3>Paris, August 2018</h3><br>
             <img src="images/image1.jpg" alt="">
             <img src="images/image40.jpg" alt="">
             <img src="images/image43.jpg" alt="">
