--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.css">
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <link rel="stylesheet" href="main.css">
-    <title>Zo's Photos</title>
+    <title>ZO's Photos</title>
 </head>
 <body>
     <header>
-        <!-- <h1>Zo's Photos</h1> -->
+        <h1>ZO's Photos</h1>
         <nav>
             <li>
                <a href="#">Home</a>
@@ -23,6 +25,9 @@
             </li>
             <li><a href="#">
                 Albums</a>
+            </li>
+            <li><a href="#">
+                About</a>
             </li>
         </nav>
     </header>
@@ -39,6 +44,7 @@
 
     </section>
     <section class="album-grid">
+        <h2>Albums</h2>
         <div class="photo-container album-container">
             <h3>Paris, August 2018</h3>
             <img src="images/image1.jpg" alt="">
@@ -49,6 +55,20 @@
             <img src="images/image86.jpg" alt="">
         </div>
     </section>
-    
+    <h2>About me:</h2>
+    <section class="about">
+        <img src="images/head-shot.png" alt="">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint recusandae iusto beatae molestiae, omnis velit magni facere. Nemo distinctio, minus earum incidunt dicta aut, facere officia quae fugiat ipsum inventore!</p>
+    </section>
+    <footer>
+            <ul class="contact" id="contact-me">
+                <li><a href="tel:1-949-285-1391"><i class="fas fa-phone-square"></i></a>
+                <li><a href="mailto:salviolorenzo@gmail.com"><i class="fas fa-envelope-square"></i></a>
+                <li><a href="https://www.linkedin.com/in/lorenzo-salvio-173210120/"><i class="fab fa-linkedin"></i></a></li>
+                <li><a href="https://github.com/salviolorenzo"><i class="fab fa-github"></i></a></li>
+                <li><a href="https://www.instagram.com/lorenzo.e.salvio/"><i class="fab fa-instagram"></i></a></li>
+                <li><a href="https://www.facebook.com/lorenzo.salvio.9"><i class="fab fa-facebook"></i></a></li>
+            </ul>
+    </footer>
 </body>
 </html>
