added formatting, text

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
         <div class="photo-container album-container">
             <h3>Paris, August 2018</h3>
             <img src="images/image1.jpg" alt="">
-            <img src="images/image40.jpg" alt="">
             <img src="images/image43.jpg" alt="">
             <img src="images/image51.jpg" alt="">
+            <img src="images/image40.jpg" alt="">
             <img src="images/image65.jpg" alt="">
             <img src="images/image86.jpg" alt="">
         </div>
@@ -61,14 +61,16 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint recusandae iusto beatae molestiae, omnis velit magni facere. Nemo distinctio, minus earum incidunt dicta aut, facere officia quae fugiat ipsum inventore!</p>
     </section>
     <footer>
-            <ul class="contact" id="contact-me">
-                <li><a href="tel:1-949-285-1391"><i class="fas fa-phone-square"></i></a>
+        <ul class="contact" id="contact-me">
+            <li><a href="tel:1-949-285-1391"><i class="fas fa-phone-square"></i></a>
                 <li><a href="mailto:salviolorenzo@gmail.com"><i class="fas fa-envelope-square"></i></a>
-                <li><a href="https://www.linkedin.com/in/lorenzo-salvio-173210120/"><i class="fab fa-linkedin"></i></a></li>
-                <li><a href="https://github.com/salviolorenzo"><i class="fab fa-github"></i></a></li>
-                <li><a href="https://www.instagram.com/lorenzo.e.salvio/"><i class="fab fa-instagram"></i></a></li>
-                <li><a href="https://www.facebook.com/lorenzo.salvio.9"><i class="fab fa-facebook"></i></a></li>
-            </ul>
+                    <li><a href="https://www.linkedin.com/in/lorenzo-salvio-173210120/"><i class="fab fa-linkedin"></i></a></li>
+                    <li><a href="#"><i class="far fa-compass"></i></a></li>
+                    <li><a href="https://github.com/salviolorenzo"><i class="fab fa-github"></i></a></li>
+                    <li><a href="https://www.instagram.com/lorenzo.e.salvio/"><i class="fab fa-instagram"></i></a></li>
+                    <li><a href="https://www.facebook.com/lorenzo.salvio.9"><i class="fab fa-facebook"></i></a></li>
+        </ul>
+        <p>Shooting on Nikon D3400 -- 18-55mm/70-300mm | iPhone 6s Plus</p>
     </footer>
 </body>
 </html>
