adds about me description

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <div class="info">
             <h3>Lorenzo Salvio</h3>
             <h5>Software Developer, Amateur Photographer</h5>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint recusandae iusto beatae molestiae, omnis velit magni facere. Nemo distinctio, minus earum incidunt dicta aut, facere officia quae fugiat ipsum inventore!</p>
+            <p>Photography has been a hobby of mine since that one class I took back in high school. I have just recently decided to take it more seriously in my search for a new creative outlet. My goal is to share experiences, not just images.</p>
         </div>    
     </section>
     <footer>
