--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <li><a href="tel:1-949-285-1391"><i class="fas fa-phone-square"></i></a>
                 <li><a href="mailto:salviolorenzo@gmail.com"><i class="fas fa-envelope-square"></i></a>
                     <li><a href="https://www.linkedin.com/in/lorenzo-salvio-173210120/"><i class="fab fa-linkedin"></i></a></li>
-                    <li><a href="#"><i class="far fa-compass"></i></a></li>
+                    <!-- <li><a href="#"><i class="far fa-compass"></i></a></li> -->
                     <li><a href="https://github.com/salviolorenzo"><i class="fab fa-github"></i></a></li>
                     <li><a href="https://www.instagram.com/lorenzo.e.salvio/"><i class="fab fa-instagram"></i></a></li>
                     <li><a href="https://www.facebook.com/lorenzo.salvio.9"><i class="fab fa-facebook"></i></a></li>
