--- a/index.html
+++ b/index.html
@@ -1,30 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.css">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
+        crossorigin="anonymous">
     <link rel="stylesheet" href="styles/main.css">
     <title>ZO's Photos</title>
 </head>
+
 <body>
     <header>
         <h1 id="home">ZO's Photos</h1>
         <nav>
             <li>
-               <a href="#home">Home</a>
+                <a href="#home">Home</a>
             </li>
             <li><a href="#featured">
-                Featured</a>
+                    Featured</a>
             </li>
             <li><a href="#places">
-                Albums</a>
+                    Albums</a>
             </li>
             <li><a href="#about">
-                About</a>
+                    About</a>
             </li>
         </nav>
     </header>
@@ -77,6 +80,12 @@
             <img src="images/DSC_0037.jpg" alt="">
             <img src="images/DSC_0038.jpg" alt="">
         </div>
+        <div class="photo-container album-container">
+            <h3>Atlanta Pride, Midtown Atlanta, October 2018</h3>
+            <img src="images/gayPrideParade.jpg" alt="">
+            <img src="images/gayPrideParade46.jpg" alt="">
+            <img src="images/gayPrideParade89.jpg" alt="">
+        </div>
     </section>
     <h2>About me:</h2>
     <section class="about" id="about">
@@ -84,8 +93,10 @@
         <div class="info">
             <h3>Lorenzo Salvio</h3>
             <h5>Software Developer, Amateur Photographer</h5>
-            <p>Photography has been a hobby of mine since that one class I took back in high school. I have just recently decided to take it more seriously in my search for a new creative outlet. My goal is to share experiences, not just images.</p>
-        </div>    
+            <p>Photography has been a hobby of mine since that one class I took back in high school. I have just recently
+                decided to take it more seriously in my search for a new creative outlet. My goal is to share experiences,
+                not just images.</p>
+        </div>
     </section>
     <footer>
         <ul class="contact" id="contact-me">
@@ -101,4 +112,5 @@
     </footer>
     <script src="scripts/main.js"></script>
 </body>
+
 </html>
