fixes featured gallery

--- a/index.html
+++ b/index.html
@@ -36,26 +36,30 @@
     <section class="featured" id="featured">
         <h2>Featured</h2>
         <div class="photo-container" data-featured>
-            <!-- <div class="cards">
+            <div class="cards">
                 <img src="images/image77.jpg" alt="">
                 <h4>Luxembourg Garden, Paris, France<br>August 16, 2018 <br>10:58 a.m.</h4>
-                <a href="https://www.google.com/maps/place/Marie+De+Medicis+Fountain/@48.8480604,2.3385868,18z/data=!4m5!3m4!1s0x47e671dc92377a55:0x67d6057607646f7c!8m2!3d48.8480528!4d2.3393268"><i class="fas fa-search-location"></i></a>
+                <a href="https://www.google.com/maps/place/Marie+De+Medicis+Fountain/@48.8480604,2.3385868,18z/data=!4m5!3m4!1s0x47e671dc92377a55:0x67d6057607646f7c!8m2!3d48.8480528!4d2.3393268"><i
+                        class="fas fa-search-location"></i></a>
             </div>
             <div class="cards">
                 <img src="images/image84.jpg" alt="">
                 <h4>La Villete Park, Paris, France<br>August 15, 2018 <br>4:36 p.m.</h4>
-                <a href="https://www.google.com/maps/place/Faleh+Alaeddine/@48.8912705,2.3860968,19z/data=!3m1!4b1!4m5!3m4!1s0x47e66dcc0ffd0243:0x10ff49b5ca4b8d6a!8m2!3d48.8912705!4d2.3860968"><i class="fas fa-search-location"></i></a>
+                <a href="https://www.google.com/maps/place/Faleh+Alaeddine/@48.8912705,2.3860968,19z/data=!3m1!4b1!4m5!3m4!1s0x47e66dcc0ffd0243:0x10ff49b5ca4b8d6a!8m2!3d48.8912705!4d2.3860968"><i
+                        class="fas fa-search-location"></i></a>
             </div>
             <div class="cards">
                 <img src="images/image43.jpg" alt="">
                 <h4>Eiffel Tower, seen from Bateau Mouche, Seine River, Paris, France <br>August 14, 2018 <br>4:20 p.m.</h4>
-                <a href="https://www.google.com/maps/place/48%C2%B051'26.1%22N+2%C2%B017'19.8%22E/@48.857247,2.28884,17z/data=!3m1!4b1!4m6!3m5!1s0x0:0x0!7e2!8m2!3d48.8572475!4d2.2888404"><i class="fas fa-search-location"></i></a>
+                <a href="https://www.google.com/maps/place/48%C2%B051'26.1%22N+2%C2%B017'19.8%22E/@48.857247,2.28884,17z/data=!3m1!4b1!4m6!3m5!1s0x0:0x0!7e2!8m2!3d48.8572475!4d2.2888404"><i
+                        class="fas fa-search-location"></i></a>
             </div>
             <div class="cards">
                 <img src="images/image2.jpg" alt="">
                 <h4>Malaquais Quay, Paris, France <br>August 16, 2018 <br>11:39 a.m.</h4>
-                <a href="https://www.google.com/maps/place/Quai+Malaquais,+75006+Paris,+France/@48.8583758,2.3331343,18z/data=!4m5!3m4!1s0x47e66e2877673a37:0x5f38da7d537f6088!8m2!3d48.8583476!4d2.333115"><i class="fas fa-search-location"></i></a>
-            </div> -->
+                <a href="https://www.google.com/maps/place/Quai+Malaquais,+75006+Paris,+France/@48.8583758,2.3331343,18z/data=!4m5!3m4!1s0x47e66e2877673a37:0x5f38da7d537f6088!8m2!3d48.8583476!4d2.333115"><i
+                        class="fas fa-search-location"></i></a>
+            </div>
         </div>
 
     </section>
